<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="roger.jaume.cornellas.olmo.editdateapp.MainActivity">

    <EditText
        android:id="@+id/edit_any"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/any"
        android:layout_alignStart="@+id/edit_mes"
        android:ems="10"
        android:hint="@string/EnterYear"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/any"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/mes"
        android:layout_marginTop="58dp"
        android:text="@string/any"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/edit_mes"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/mes"
        android:layout_alignBottom="@+id/mes"
        android:layout_alignStart="@+id/edit_dia"
        android:text="@string/Maig"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/dia"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btn_suma"
        android:text="@string/dia"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_suma"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/btn_resta"
        android:layout_alignBottom="@+id/btn_resta"
        android:layout_toStartOf="@+id/btn_resta"
        android:text="-"
        android:textSize="20sp" />

    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="+"
        android:textSize="20sp"
        android:id="@+id/btn_resta"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="21dp" />

    <TextView
        android:id="@+id/mes"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_dia"
        android:layout_marginTop="42dp"
        android:text="@string/mes"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edit_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_resta"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/EnterDay"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_avui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="38dp"
        android:layout_marginStart="18dp"
        android:text="@string/avui" />

    <Button
        android:id="@+id/btn_mostra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_avui"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="21dp"
        android:text="@string/mostra" />
</RelativeLayout>
